--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-_site
+_site/
 .DS_Store
-.jekyll
-.bundle
-.sass-cache
-Gemfile
+.*.swp
+.idea
+.sass-cache/
+*~
+bourbon/
 Gemfile.lock
-node_modules
-package.json
