--- a/_config.yml
+++ b/_config.yml
@@ -1,74 +1,57 @@
-#
-# This file contains configuration flags to customize your site
-#
+# Harmony Jekyll theme general configurations 
 
-# Name of your site (displayed in the header)
-name: Evamvid Sharma
+# Base URL
+baseurl: /harmony
 
-# Short bio or description (displayed in the header)
-description: Developing Developer
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble: 
-  email: evamvid@gmail.com
-  facebook: 
-  flickr: 
-  github: evamvid/evamvid.github.io
-  instagram: 
-  linkedin: 
-  pinterest: 
-  rss: rss # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: evamvid
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-
-# Your disqus shortname, entering this will enable commenting on posts
-disqus: evamsharma
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: 
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
+# Site live URL
 url: http://evamvid.github.io
 
-# If you're hosting your site at a Project repository on GitHub pages 
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+# Localhost 
+#url: http://192.168.0.102:4000
 
-#
-# !! You don't need to change any of the configuration flags below !!
-#
+# Harmony theme configuration. Please change accordingly.
+harmony:
+  name: Evam Sharma
+  # Little description about your site
+  description: Harmony is a free responsive jekyll theme.
+  meta_description: Harmony is free responsive jekyll theme. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+  basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
+  author: # Author details
+    name: Evamvid Sharma
+    email: evamvid@gmail.com
+    url: http://evamvid.github.io
 
-markdown: kramdown
-highlighter: pygments
-permalink: /:title/
+  # Google Analytics key, leave blank to ignore
+  google_analytics_key: UA-xxxx-x
 
-# The release of Jekyll Now that you're using
-version: v1.0.0
+  # Profile links, leave blank to ignore
+  social: 
+    github: evamvid
+    twitter: evamvid
+    facebook: 
+    gplus: +evamvid
+    dribble: 
+    pinterest: 
+  # Toggle disclaimer in footer
+  show_disclaimer: true
 
-# Set the Sass partials directory, as we're using @imports
+# Conversion / Build settings 
+markdown:    kramdown
+highlighter: pygments # this is how you put pygments config in jekyll 2.0 instead of pygments: true
+
+# Permalinks
+permalink:        pretty
+
+exclude: 
+  - CNAME
+  - Gemfile
+  - Rakefile
+  - README.md
+  - .gitignore
+  - .sass-cache
+  - Gemfile.lock
+
+# Sass conversion configs
 sass:
-  sass_dir: _scss
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jemoji # Emoji please!
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-
-# Exclude these files from your production _site
-exclude:
-    - Gemfile
-    - Gemfile.lock
-    - LICENSE
-    - README.md
+    sass_dir: assets/css/_sass
+    style: :compressed
