--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Harmony Jekyll theme general configurations 
 
 # Base URL
-baseurl: evamvid.github.io
+baseurl: \
 
 # Site live URL
 url: http://evamvid.github.io
