--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: http://evamvid.github.io
 harmony:
   name: Evam Sharma
   # Little description about your site
-  description: Harmony is a free responsive jekyll theme.
+  description: A Developing Developer
   meta_description: Harmony is free responsive jekyll theme. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
   basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
   author: # Author details
@@ -29,9 +29,10 @@ harmony:
     github: evamvid
     twitter: evamvid
     facebook: 
-    gplus: +evamvid
+    gplus:
     dribble: 
     pinterest: 
+	stackoverflow:
   # Toggle disclaimer in footer
   show_disclaimer: true
 
